add html code for: services, advantages,testing sections and upload img for them

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,335 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- START SECTION: New Section -->
+    <!-- Start Section: Our Services -->
+    <section id="our-services">
+      <div class="container">
+        <div class="row">
+          <div class="col-12"><h3 class="text-center">Наши услуги</h3></div>
+        </div>
 
-    <section class="container"><h2 class="text-center">YO-YO-YO</h2></section>
+        <div class="row">
+          <!-- Start Service Item -->
+          <div class="col-xl-4 service-col">
+            <div class="service-item">
+              <div class="service-item__icon">
+                <img
+                  src="assets/images/service_icon-1.png"
+                  alt="Service Icon"
+                />
+              </div>
+              <div class="service-item__text">
+                <p class="mb-0">
+                  Расследования краж, <br />
+                  хищений, мошенничества
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- End Service Item -->
 
-    <!-- END SECTION: New Section -->
+          <!-- Start Service Item -->
+          <div class="col-xl-4 service-col">
+            <div class="service-item">
+              <div class="service-item__icon">
+                <img
+                  src="assets/images/service_icon-2.png"
+                  alt="Service Icon"
+                />
+              </div>
+              <div class="service-item__text">
+                <p class="mb-0">
+                  Проверка домашнего <br />
+                  персонала
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- End Service Item -->
+
+          <!-- Start Service Item -->
+          <div class="col-xl-4 service-col">
+            <div class="service-item">
+              <div class="service-item__icon">
+                <img
+                  src="assets/images/service_icon-3.png"
+                  alt="Service Icon"
+                />
+              </div>
+              <div class="service-item__text">
+                <p class="mb-0">
+                  Выявление наркотической, <br />
+                  алкогольной зависимости
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- End Service Item -->
+
+          <!-- Start Service Item -->
+          <div class="col-xl-4 service-col">
+            <div class="service-item">
+              <div class="service-item__icon">
+                <img
+                  src="assets/images/service_icon-4.png"
+                  alt="Service Icon"
+                />
+              </div>
+              <div class="service-item__text">
+                <p class="mb-0">
+                  Кадровые <br />
+                  проверки
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- End Service Item -->
+
+          <!-- Start Service Item -->
+          <div class="col-xl-4 service-col">
+            <div class="service-item">
+              <div class="service-item__icon">
+                <img
+                  src="assets/images/service_icon-5.png"
+                  alt="Service Icon"
+                />
+              </div>
+              <div class="service-item__text">
+                <p class="mb-0">
+                  Проверка на <br />
+                  измену
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- End Service Item -->
+
+          <!-- Start Service Item -->
+          <div class="col-xl-4 service-col">
+            <div class="service-item">
+              <div class="service-item__icon">
+                <img
+                  src="assets/images/service_icon-6.png"
+                  alt="Service Icon"
+                />
+              </div>
+              <div class="service-item__text">
+                <p class="mb-0">
+                  Тестирование <br />
+                  несовершеннолетних
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- End Service Item -->
+        </div>
+      </div>
+    </section>
+    <!-- Start Section: Our Services -->
+
+    <!-- Start Section: Advantages -->
+    <section id="advantages">
+      <div class="container">
+        <div class="row">
+          <div class="col-12"><h3>Почему клиенты выбирают нас</h3></div>
+        </div>
+
+        <div class="row">
+          <!-- Start Advantage -->
+          <div class="col-xl-6 advantage">
+            <div class="advantage__icon">
+              <img
+                src="assets/images/advantage_icon-1.png"
+                alt="Advantage Icon"
+              />
+            </div>
+            <div class="advantage__text">
+              <h6>Репутация и профессионализм</h6>
+              <p class="mb-0">
+                Тестирования проводятся профессиональными сотрудниками силовых
+                структур и психологами.
+              </p>
+            </div>
+          </div>
+          <!-- End Advantage -->
+
+          <!-- Start Advantage -->
+          <div class="col-xl-6 advantage">
+            <div class="advantage__icon">
+              <img
+                src="assets/images/advantage_icon-2.png"
+                alt="Advantage Icon"
+              />
+            </div>
+            <div class="advantage__text">
+              <h6>Опыт работы</h6>
+              <p class="mb-0">
+                Опыт работы с применением детектора лжи более 10 лет, а так же
+                опыт работы по раскрытию преступлений, в том числе тяжких
+                резонансных свыше 20 лет.
+              </p>
+            </div>
+          </div>
+          <!-- End Advantage -->
+
+          <!-- Start Advantage -->
+          <div class="col-xl-6 advantage">
+            <div class="advantage__icon">
+              <img
+                src="assets/images/advantage_icon-3.png"
+                alt="Advantage Icon"
+              />
+            </div>
+            <div class="advantage__text">
+              <h6>Оперативное реагирование</h6>
+              <p class="mb-0">
+                Наша эксперты всегда быстро и эффективно реагирует на
+                поставленные задачи, учитывая все пожелания клиента.
+              </p>
+            </div>
+          </div>
+          <!-- End Advantage -->
+
+          <!-- Start Advantage -->
+          <div class="col-xl-6 advantage">
+            <div class="advantage__icon">
+              <img
+                src="assets/images/advantage_icon-4.png"
+                alt="Advantage Icon"
+              />
+            </div>
+            <div class="advantage__text">
+              <h6>Мобильность</h6>
+              <p class="mb-0">
+                Возможность выезда эксперта-полиграфолога на территорию клиента.
+              </p>
+            </div>
+          </div>
+          <!-- End Advantage -->
+
+          <!-- Start Advantage -->
+          <div class="col-xl-6 advantage">
+            <div class="advantage__icon">
+              <img
+                src="assets/images/advantage_icon-5.png"
+                alt="Advantage Icon"
+              />
+            </div>
+            <div class="advantage__text">
+              <h6>Ценовая политика</h6>
+              <p class="mb-0">
+                Высокое качество услуг по доступным ценам. Гибкая ценовая
+                политика.
+              </p>
+            </div>
+          </div>
+          <!-- End Advantage -->
+
+          <!-- Start Advantage -->
+          <div class="col-xl-6 advantage">
+            <div class="advantage__icon">
+              <img
+                src="assets/images/advantage_icon-6.png"
+                alt="Advantage Icon"
+              />
+            </div>
+            <div class="advantage__text">
+              <h6>Строгая конфиденциальность</h6>
+              <p class="mb-0">
+                Мы обеспечиваем полную конфиденциальность и неразглашение
+                полученной информации!
+              </p>
+            </div>
+          </div>
+          <!-- End Advantage -->
+        </div>
+      </div>
+    </section>
+    <!-- End Section Advantages -->
+
+    <!-- Start Section: Testing -->
+    <section id="testing">
+      <div class="container">
+        <div class="row">
+          <div class="col-12"><h2>процедура тестирования</h2></div>
+        </div>
+
+        <div class="row">
+          <!-- Start Step Item -->
+          <div class="col-xl-3 step-item">
+            <div class="step-item__icon">
+              <img src="assets/images/step_icon-1.png" alt="Step Icon" />
+            </div>
+            <div class="step-item__text">
+              <h5>Шаг 1</h5>
+              <p class="mb-0">Заявка на тестирование</p>
+            </div>
+          </div>
+          <!-- End Step Item -->
+
+          <!-- Start Step Item -->
+          <div class="col-xl-3 step-item">
+            <div class="step-item__icon">
+              <img src="assets/images/step_icon-2.png" alt="Step Icon" />
+            </div>
+            <div class="step-item__text">
+              <h5>Шаг 2</h5>
+              <p class="mb-0">Изучение ситуации</p>
+            </div>
+          </div>
+          <!-- End Step Item -->
+
+          <!-- Start Step Item -->
+          <div class="col-xl-3 step-item">
+            <div class="step-item__icon">
+              <img src="assets/images/step_icon-3.png" alt="Step Icon" />
+            </div>
+            <div class="step-item__text">
+              <h5>Шаг 3</h5>
+              <p class="mb-0">Составление индивидуальных тестов</p>
+            </div>
+          </div>
+          <!-- End Step Item -->
+
+          <!-- Start Step Item -->
+          <div class="col-xl-3 step-item">
+            <div class="step-item__icon">
+              <img src="assets/images/step_icon-4.png" alt="Step Icon" />
+            </div>
+            <div class="step-item__text">
+              <h5>Шаг 4</h5>
+              <p class="mb-0">Предтестовая беседа</p>
+            </div>
+          </div>
+          <!-- End Step Item -->
+
+          <!-- Start Step Item -->
+          <div class="col-xl-3 step-item">
+            <div class="step-item__icon">
+              <img src="assets/images/step_icon-5.png" alt="Step Icon" />
+            </div>
+            <div class="step-item__text">
+              <h5>Шаг 5</h5>
+              <p class="mb-0">Тестирование</p>
+            </div>
+          </div>
+          <!-- End Step Item -->
+
+          <!-- Start Step Item -->
+          <div class="col-xl-3 step-item">
+            <div class="step-item__icon">
+              <img src="assets/images/step_icon-6.png" alt="Step Icon" />
+            </div>
+            <div class="step-item__text">
+              <h5>Шаг 6</h5>
+              <p class="mb-0">Анализ результатов и составление отчета</p>
+            </div>
+          </div>
+          <!-- End Step Item -->
+        </div>
+      </div>
+    </section>
+    <!-- End Section: Testing -->
 
     <!-- Import Scripts -->
     <script src="assets/js/jquery-3.3.1.min.js"></script>
