--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Project Template</title>
+    <title>Детективное агенство</title>
     <meta
       name="description"
       content="This is a meta description sample. We can add up to 160 characters."
@@ -14,6 +14,7 @@
     <meta name="copyright" content="company name" />
     <meta name="author" content="name, email@hotmail.com" />
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -40,7 +41,7 @@
             <li
               class="nav-item d-flex align-items-center justify-content-center flex-column"
             >
-              <div class="phone-item">
+              <div class="phone-item d-flex align-items-center justifyc-content-start">
                 <div class="icon">
                   <img src="assets/images/phone-icon.png" alt="Nav Icon" />
                 </div>
@@ -48,7 +49,7 @@
                   <a href="tel:+38 (050) 180-36-00">+38 (050) 180-36-00</a>
                 </div>
               </div>
-              <div class="phone-item">
+              <div class="phone-item d-flex align-items-center justifyc-content-start">
                 <div class="icon">
                   <img src="assets/images/viber-icon.png" alt="Nav Icon" />
                 </div>
@@ -71,7 +72,7 @@
       <div class="container">
         <div class="navbars collapse navbar-collapse">
           <ul
-            class="navbar-nav w-100 d-flex justify-content-lg-around justify-content-xl-around"
+            class="navbar-nav w-100 d-flex"
           >
             <li class="nav-item">
               <a class="nav-link hover-underline" href="index.html">Главная</a>
@@ -162,7 +163,7 @@
             role="button"
             data-slide="prev"
           >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <i class="fa fa-angle-left"></i>
             <span class="sr-only">Previous</span>
           </a>
           <a
@@ -171,7 +172,7 @@
             role="button"
             data-slide="next"
           >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <i class="fa fa-angle-right"></i>
             <span class="sr-only">Next</span>
           </a>
         </div>
@@ -190,18 +191,20 @@
             <!-- Start Service Item -->
             <div class="col-xl-4 service-col">
               <div class="service-item">
-                <div class="service-item__icon">
-                  <img
-                    src="assets/images/service_icon-1.png"
-                    alt="Service Icon"
-                  />
-                </div>
-                <div class="service-item__text">
-                  <p class="mb-0">
-                    Расследования краж, <br />
-                    хищений, мошенничества
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="service-item__icon">
+                    <img
+                      src="assets/images/service_icon-1.png"
+                      alt="Service Icon"
+                    />
+                  </div>
+                  <div class="service-item__text">
+                    <p class="mb-0">
+                      Расследования краж, <br />
+                      хищений, мошенничества
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
             <!-- End Service Item -->
@@ -209,18 +212,20 @@
             <!-- Start Service Item -->
             <div class="col-xl-4 service-col">
               <div class="service-item">
-                <div class="service-item__icon">
-                  <img
-                    src="assets/images/service_icon-2.png"
-                    alt="Service Icon"
-                  />
-                </div>
-                <div class="service-item__text">
-                  <p class="mb-0">
-                    Проверка домашнего <br />
-                    персонала
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="service-item__icon">
+                    <img
+                      src="assets/images/service_icon-2.png"
+                      alt="Service Icon"
+                    />
+                  </div>
+                  <div class="service-item__text">
+                    <p class="mb-0">
+                      Проверка домашнего <br />
+                      персонала
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
             <!-- End Service Item -->
@@ -228,18 +233,20 @@
             <!-- Start Service Item -->
             <div class="col-xl-4 service-col">
               <div class="service-item">
-                <div class="service-item__icon">
-                  <img
-                    src="assets/images/service_icon-3.png"
-                    alt="Service Icon"
-                  />
-                </div>
-                <div class="service-item__text">
-                  <p class="mb-0">
-                    Выявление наркотической, <br />
-                    алкогольной зависимости
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="service-item__icon">
+                    <img
+                      src="assets/images/service_icon-3.png"
+                      alt="Service Icon"
+                    />
+                  </div>
+                  <div class="service-item__text">
+                    <p class="mb-0">
+                      Выявление наркотической, <br />
+                      алкогольной зависимости
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
             <!-- End Service Item -->
@@ -247,18 +254,20 @@
             <!-- Start Service Item -->
             <div class="col-xl-4 service-col">
               <div class="service-item">
-                <div class="service-item__icon">
-                  <img
-                    src="assets/images/service_icon-4.png"
-                    alt="Service Icon"
-                  />
-                </div>
-                <div class="service-item__text">
-                  <p class="mb-0">
-                    Кадровые <br />
-                    проверки
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="service-item__icon">
+                    <img
+                      src="assets/images/service_icon-4.png"
+                      alt="Service Icon"
+                    />
+                  </div>
+                  <div class="service-item__text">
+                    <p class="mb-0">
+                      Кадровые <br />
+                      проверки
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
             <!-- End Service Item -->
@@ -266,18 +275,20 @@
             <!-- Start Service Item -->
             <div class="col-xl-4 service-col">
               <div class="service-item">
-                <div class="service-item__icon">
-                  <img
-                    src="assets/images/service_icon-5.png"
-                    alt="Service Icon"
-                  />
-                </div>
-                <div class="service-item__text">
-                  <p class="mb-0">
-                    Проверка на <br />
-                    измену
-                  </p>
-                </div>
+                <a href="#">
+                  <div class="service-item__icon">
+                    <img
+                      src="assets/images/service_icon-5.png"
+                      alt="Service Icon"
+                    />
+                  </div>
+                  <div class="service-item__text">
+                    <p class="mb-0">
+                      Проверка на <br />
+                      измену
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
             <!-- End Service Item -->
@@ -285,19 +296,21 @@
             <!-- Start Service Item -->
             <div class="col-xl-4 service-col">
               <div class="service-item">
-                <div class="service-item__icon">
-                  <img
-                    src="assets/images/service_icon-6.png"
-                    alt="Service Icon"
-                  />
+                <a href="#">
+                  <div class="service-item__icon">
+                    <img
+                      src="assets/images/service_icon-6.png"
+                      alt="Service Icon"
+                    />
+                  </div>
+                  <div class="service-item__text">
+                    <p class="mb-0">
+                      Тестирование <br />
+                      несовершеннолетних
+                    </p>
+                  </div>
                 </div>
-                <div class="service-item__text">
-                  <p class="mb-0">
-                    Тестирование <br />
-                    несовершеннолетних
-                  </p>
-                </div>
-              </div>
+              </a>
             </div>
             <!-- End Service Item -->
           </div>
