styled services and advantages sections

--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
                   <h5>Беспокоит подозрительное поведение ребенка?</h5>
                 </div>
                 <p>
-                  Наша команда поможет Вам выявить виновных и вернуть украденное
+                  Наша команда поможет Вам выявить <br> виновных и вернуть украденное
                 </p>
                 <a href="#" class="btn">Узнать больше</a>
               </div>
@@ -150,7 +150,7 @@
                   <h5>Беспокоит подозрительное поведение мужа?</h5>
                 </div>
                 <p>
-                  Наша команда поможет Вам выявить виновных и вернуть украденное
+                  Наша команда поможет Вам выявить <br> виновных и вернуть украденное
                 </p>
                 <a href="#" class="btn">Узнать больше</a>
               </div>
@@ -184,10 +184,10 @@
       <section id="our-services">
         <div class="container">
           <div class="row">
-            <div class="col-12"><h3 class="text-center">Наши услуги</h3></div>
+            <div class="col-12 section-title"><h3 class="text-center">Наши услуги</h3></div>
           </div>
 
-          <div class="row">
+          <div class="row services">
             <!-- Start Service Item -->
             <div class="col-xl-4 service-col">
               <div class="service-item">
@@ -322,7 +322,7 @@
       <section id="advantages">
         <div class="container">
           <div class="row">
-            <div class="col-12"><h3>Почему клиенты выбирают нас</h3></div>
+            <div class="col-12 section-title"><h3>Почему клиенты выбирают нас</h3></div>
           </div>
 
           <div class="row">
