styled testing and slider sections

--- a/src/index.html
+++ b/src/index.html
@@ -443,12 +443,12 @@
       <section id="testing">
         <div class="container">
           <div class="row">
-            <div class="col-12"><h2>процедура тестирования</h2></div>
+            <div class="col-12 section-title"><h2>процедура тестирования</h2></div>
           </div>
 
           <div class="row">
             <!-- Start Step Item -->
-            <div class="col-xl-3 step-item">
+            <div class="col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-1.png" alt="Step Icon" />
               </div>
@@ -460,7 +460,7 @@
             <!-- End Step Item -->
 
             <!-- Start Step Item -->
-            <div class="col-xl-3 step-item">
+            <div class="col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-2.png" alt="Step Icon" />
               </div>
@@ -472,7 +472,7 @@
             <!-- End Step Item -->
 
             <!-- Start Step Item -->
-            <div class="col-xl-3 step-item">
+            <div class="col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-3.png" alt="Step Icon" />
               </div>
@@ -484,7 +484,7 @@
             <!-- End Step Item -->
 
             <!-- Start Step Item -->
-            <div class="col-xl-3 step-item">
+            <div class="col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-4.png" alt="Step Icon" />
               </div>
@@ -496,7 +496,7 @@
             <!-- End Step Item -->
 
             <!-- Start Step Item -->
-            <div class="col-xl-3 step-item">
+            <div class="col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-5.png" alt="Step Icon" />
               </div>
@@ -508,7 +508,7 @@
             <!-- End Step Item -->
 
             <!-- Start Step Item -->
-            <div class="col-xl-3 step-item">
+            <div class="col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-6.png" alt="Step Icon" />
               </div>
