styled home page

--- a/src/index.html
+++ b/src/index.html
@@ -75,28 +75,28 @@
             class="navbar-nav w-100 d-flex"
           >
             <li class="nav-item">
-              <a class="nav-link hover-underline" href="index.html">Главная</a>
+              <a class="nav-link active" href="index.html">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link hover-underline" href="transportirovka.html"
+              <a class="nav-link " href="transportirovka.html"
                 >О нас</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link hover-underline" href="price-list.html"
+              <a class="nav-link" href="price-list.html"
                 >Детектор лжи</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link hover-underline" href="blog.html">Услуги</a>
+              <a class="nav-link" href="blog.html">Услуги</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link hover-underline" href="contacts.html"
+              <a class="nav-link" href="contacts.html"
                 >Полезное</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link hover-underline" href="contacts.html"
+              <a class="nav-link" href="contacts.html"
                 >Контакты</a
               >
             </li>
@@ -665,24 +665,24 @@
           <!-- Two -->
           <div class="col-xl-2 offset-xl-1 two">
             <ul class="list-unstyled mb-0">
-              <li><a href="#">Главная</a></li>
-              <li><a href="#">О нас</a></li>
-              <li><a href="#">Детектор лжи</a></li>
+              <li><a class="hover-underline-animation" href="#">Главная</a></li>
+              <li><a class="hover-underline-animation" href="#">О нас</a></li>
+              <li><a class="hover-underline-animation" href="#">Детектор лжи</a></li>
             </ul>
           </div>
           <!-- Three -->
           <div class="col-xl-2 three">
             <ul class="list-unstyled mb-0">
-              <li><a href="#">Услуги</a></li>
-              <li><a href="#">Полезное</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li><a class="hover-underline-animation" href="#">Услуги</a></li>
+              <li><a class="hover-underline-animation" href="#">Полезное</a></li>
+              <li><a class="hover-underline-animation" href="#">Контакты</a></li>
             </ul>
           </div>
           <!-- Four -->
           <div class="col-xl-4 four">
             <a href="tel:+38 (097) 111-11-11">+38 (097) 111-11-11</a>
             <small>Пн-Вс, 09-00:20-00</small>
-            <a href="mailto:mail_you@gmail.com">mail_you@gmail.com</a>
+            <a class="email" href="mailto:mail_you@gmail.com">mail_you@gmail.com</a>
             <div class="button">
               <button class="btn">Бесплатная консультация</button>
             </div>
@@ -697,7 +697,7 @@
 
         <div class="row">
             <div class="col-12 text-center developer">
-              <p class="mb-0">Разработка сайта<a href="http://mark-lab.biz"> “Mark-Lab”</a></p>
+              <p class="mb-0">Разработка сайта <a href="http://mark-lab.biz">“Mark-Lab”</a></p>
             </div>
           </div>
 
