add media for all section :not footer and nav

--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
 
           <div class="row services">
             <!-- Start Service Item -->
-            <div class="col-xl-4 service-col">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-col">
               <div class="service-item">
                 <a href="#">
                   <div class="service-item__icon">
@@ -210,7 +210,7 @@
             <!-- End Service Item -->
 
             <!-- Start Service Item -->
-            <div class="col-xl-4 service-col">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-col">
               <div class="service-item">
                 <a href="#">
                   <div class="service-item__icon">
@@ -231,7 +231,7 @@
             <!-- End Service Item -->
 
             <!-- Start Service Item -->
-            <div class="col-xl-4 service-col">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-col">
               <div class="service-item">
                 <a href="#">
                   <div class="service-item__icon">
@@ -252,7 +252,7 @@
             <!-- End Service Item -->
 
             <!-- Start Service Item -->
-            <div class="col-xl-4 service-col">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-col">
               <div class="service-item">
                 <a href="#">
                   <div class="service-item__icon">
@@ -273,7 +273,7 @@
             <!-- End Service Item -->
 
             <!-- Start Service Item -->
-            <div class="col-xl-4 service-col">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-col">
               <div class="service-item">
                 <a href="#">
                   <div class="service-item__icon">
@@ -294,7 +294,7 @@
             <!-- End Service Item -->
 
             <!-- Start Service Item -->
-            <div class="col-xl-4 service-col">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-col">
               <div class="service-item">
                 <a href="#">
                   <div class="service-item__icon">
@@ -327,7 +327,7 @@
 
           <div class="row">
             <!-- Start Advantage -->
-            <div class="col-xl-6 advantage">
+            <div class="col-md-6 col-lg-6 col-xl-6 advantage">
               <div class="advantage__icon">
                 <img
                   src="assets/images/advantage_icon-1.png"
@@ -345,7 +345,7 @@
             <!-- End Advantage -->
 
             <!-- Start Advantage -->
-            <div class="col-xl-6 advantage">
+            <div class="col-md-6 col-lg-6 col-xl-6 advantage">
               <div class="advantage__icon">
                 <img
                   src="assets/images/advantage_icon-2.png"
@@ -364,7 +364,7 @@
             <!-- End Advantage -->
 
             <!-- Start Advantage -->
-            <div class="col-xl-6 advantage">
+            <div class="col-md-6 col-lg-6 col-xl-6 advantage">
               <div class="advantage__icon">
                 <img
                   src="assets/images/advantage_icon-3.png"
@@ -382,7 +382,7 @@
             <!-- End Advantage -->
 
             <!-- Start Advantage -->
-            <div class="col-xl-6 advantage">
+            <div class="col-md-6 col-lg-6 col-xl-6 advantage">
               <div class="advantage__icon">
                 <img
                   src="assets/images/advantage_icon-4.png"
@@ -400,7 +400,7 @@
             <!-- End Advantage -->
 
             <!-- Start Advantage -->
-            <div class="col-xl-6 advantage">
+            <div class="col-md-6 col-lg-6 col-xl-6 advantage">
               <div class="advantage__icon">
                 <img
                   src="assets/images/advantage_icon-5.png"
@@ -418,7 +418,7 @@
             <!-- End Advantage -->
 
             <!-- Start Advantage -->
-            <div class="col-xl-6 advantage">
+            <div class="col-md-6 col-lg-6 col-xl-6 advantage">
               <div class="advantage__icon">
                 <img
                   src="assets/images/advantage_icon-6.png"
@@ -448,7 +448,7 @@
 
           <div class="row">
             <!-- Start Step Item -->
-            <div class="col-xl-4 step-item">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-1.png" alt="Step Icon" />
               </div>
@@ -460,7 +460,7 @@
             <!-- End Step Item -->
 
             <!-- Start Step Item -->
-            <div class="col-xl-4 step-item">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-2.png" alt="Step Icon" />
               </div>
@@ -472,7 +472,7 @@
             <!-- End Step Item -->
 
             <!-- Start Step Item -->
-            <div class="col-xl-4 step-item">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-3.png" alt="Step Icon" />
               </div>
@@ -484,7 +484,7 @@
             <!-- End Step Item -->
 
             <!-- Start Step Item -->
-            <div class="col-xl-4 step-item">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-4.png" alt="Step Icon" />
               </div>
@@ -496,7 +496,7 @@
             <!-- End Step Item -->
 
             <!-- Start Step Item -->
-            <div class="col-xl-4 step-item">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-5.png" alt="Step Icon" />
               </div>
@@ -508,7 +508,7 @@
             <!-- End Step Item -->
 
             <!-- Start Step Item -->
-            <div class="col-xl-4 step-item">
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 step-item">
               <div class="step-item__icon">
                 <img src="assets/images/step_icon-6.png" alt="Step Icon" />
               </div>
