added media query for nav and footer

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- Start Navigation -->
-    <nav class="navbar navbar-expand-lg py-3 primary-nav">
+    <nav class="navbar navbar-expand-md py-3 primary-nav">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="assets/images/brand.png" alt="brand" />
@@ -68,7 +68,7 @@
         </div>
       </div>
     </nav>
-    <nav class="navbar navbar-expand-lg secondary-nav">
+    <nav class="navbar navbar-expand-md secondary-nav">
       <div class="container">
         <div class="navbars collapse navbar-collapse">
           <ul
@@ -637,7 +637,7 @@
 
         <div class="row">
           <!-- One -->
-          <div class="col-xl-3 one">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3 one">
             <div class="text">
               <p>
                 Детективное агентство «DetectivOper» предлагает профессиональные
@@ -663,7 +663,7 @@
             </div>
           </div>
           <!-- Two -->
-          <div class="col-xl-2 offset-xl-1 two">
+          <div class="col-6 col-sm-6 col-md-6 col-lg-2 col-xl-2 offset-xl-1 two">
             <ul class="list-unstyled mb-0">
               <li><a class="hover-underline-animation" href="#">Главная</a></li>
               <li><a class="hover-underline-animation" href="#">О нас</a></li>
@@ -671,7 +671,7 @@
             </ul>
           </div>
           <!-- Three -->
-          <div class="col-xl-2 three">
+          <div class="col-6 col-sm-6 col-md-6 col-lg-2 col-xl-2 three">
             <ul class="list-unstyled mb-0">
               <li><a class="hover-underline-animation" href="#">Услуги</a></li>
               <li><a class="hover-underline-animation" href="#">Полезное</a></li>
@@ -679,7 +679,7 @@
             </ul>
           </div>
           <!-- Four -->
-          <div class="col-xl-4 four">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4 four">
             <a href="tel:+38 (097) 111-11-11">+38 (097) 111-11-11</a>
             <small>Пн-Вс, 09-00:20-00</small>
             <a class="email" href="mailto:mail_you@gmail.com">mail_you@gmail.com</a>
