html code for about page

--- a/src/index.html
+++ b/src/index.html
@@ -78,20 +78,20 @@
               <a class="nav-link active" href="index.html">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="transportirovka.html"
+              <a class="nav-link " href="about.html"
                 >О нас</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="price-list.html"
+              <a class="nav-link" href="detektor.html"
                 >Детектор лжи</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog.html">Услуги</a>
+              <a class="nav-link" href="services.html">Услуги</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacts.html"
+              <a class="nav-link" href="blog.html"
                 >Полезное</a
               >
             </li>
@@ -309,8 +309,8 @@
                       несовершеннолетних
                     </p>
                   </div>
-                </div>
-              </a>
+                </a>
+              </div>
             </div>
             <!-- End Service Item -->
           </div>
