styled about-page

--- a/src/about.html
+++ b/src/about.html
@@ -111,7 +111,7 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 page-title">
             <h2 class="text-center">
               О нас
             </h2>
@@ -121,7 +121,7 @@
         <div class="row main-content">
           <div class="col-lg-8 col-xl-8 mx-auto">
             <div class="page-cover">
-              <img class="img-fluid" src="assets/images/about-img.png" alt="Cover">
+              <img class="w-100" src="assets/images/about-img.png" alt="Cover">
             </div>
             <div class="page-text">
               <p>
@@ -171,7 +171,7 @@
       <div class="container">
         <div class="row">
           <!-- Left -->
-          <div class="col-lg-6 col-xl-6">
+          <div class="col-lg-6 col-xl-6 left">
             <div class="title">
                 <h3>
                     Документальный фильм <br>
@@ -184,26 +184,28 @@
           </div>
 
           <!-- Right -->
-          <div class="col-lg-6 col-xl-6">
+          <div class="col-lg-6 col-xl-6 right">
             <div class="title">
-              <h3>Свяжитесь с нами:</h3>
+              <h3 class="text-center">Свяжитесь с нами:</h3>
             </div>
             <form action="#">
               <div class="row">
                 <div class="col-lg-6 col-xl-6">
                   <div class="form-group">
-                    <input type="text" name="name" class="form-control">
+                    <input type="text" name="name" class="form-control" placeholder="Ваше имя">
                   </div>
                 </div>
                 <div class="col-lg-6 col-xl-6">
                   <div class="form-group">
-                    <input type="text" name="name" class="form-control">
+                    <input type="text" name="name" class="form-control" placeholder="Ваш номер телефона">
                   </div>
                 </div>
                 <div class="col-lg-12 col-xl-12">
                   <div class="form-group">
-                      <textarea class="form-control" rows="5"></textarea>
+                      <textarea class="form-control" rows="6" placeholder="Введите ваше сообщение"></textarea>
                   </div>
+                </div>
+                <div class="col-lg-12 col-xl-12">
                   <div class="form-group">
                     <input class="btn form-control" type="submit" value="Отправить сообщение">
                   </div>
